--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "displayName": "Night Owl Theme",
   "description": "",
   "icon": "image/icon.png",
-  "version": "0.0.3",
+  "version": "0.0.4",
   "engines": {
     "vscode": "^1.74.0"
   },
@@ -14,7 +14,7 @@
   "contributes": {
     "themes": [
       {
-        "label": "Night Owl Theme",
+        "label": "Night Owl Theme Default",
         "uiTheme": "vs-dark",
         "path": "./themes/Night Owl Theme-color-theme.json"
       }
